fix for elastic scroll on safari and chrome

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    overscroll-behavior-y: none;
+}
+
 .app {
     background-color: var(--clrPrimary);
     font-family: $fontFamily;
